fix ra pet layout breaking with a level 25 and < 25 pet

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -6407,6 +6407,8 @@ kbd {
 }
 
 .l-ra-all-pets-container {
+  display: flex;
+  flex-wrap: wrap;
   margin: auto;
   width: 80rem;
   height: 100%;
